differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr45079.c-5.4.0-3.out.txt
pr45079.c: In function ‘foo’:
pr45079.c:7:19: error: assignment of read-only location ‘*(p + (sizetype)(((cond) != 0 ? (long unsigned int)a : (long unsigned int)b) * 1ul))’
   p[cond ? a : b] = '\0';  
                   ^
